// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Tile should render Default 1`] = `
<DocumentFragment>
  <a
    class="css-1ge4v1m"
    href="slug"
  >
    <div
      class="css-zfebdm"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="extra-classname css-1ge4v1m"
    href="slug"
  >
    <div
      class="css-zfebdm"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="css-1ge4v1m"
    href="slug"
  >
    <div
      class="css-zfebdm"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="css-1ge4v1m"
    href="slug"
  >
    <div
      class="css-zfebdm"
    />
    <div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <a
    class="css-1ge4v1m"
    href="slug"
  >
    <div
      class="css-zfebdm"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Foobar
      </h6>
    </div>
  </a>
</DocumentFragment>
`;
